# gohangout-rs

./: .gitignore  Cargo.toml  README.md  TASK_STATUS_UPDATE.md  config.yaml
examples/: config.yaml
src/: lib.rs  main.rs  main.rs.bak
src/config/: config.rs  loader.rs  mod.rs  validation.rs
src/event/: event.rs  mod.rs  pipeline.rs  processor.rs  traits.rs
src/input/: codec.rs  mod.rs  random.rs  stdin.rs
src/output/: format.rs  mod.rs  stdout.rs
src/plugin/: error.rs  factory.rs  manager.rs  mod.rs  registry.rs  traits.rs
src/watcher/: fs_watcher.rs  mod.rs
tests/: config_tests.rs  event_tests.rs  plugin_tests.rs  random_tests.rs  stdin_tests.rs  stdout_tests.rs  watcher_tests.rs
