[package]
name = "gohangout-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of GoHangout - Logstash alternative for ETL processing"
authors = ["OpenClaw Assistant"]
license = "MIT"
repository = "https://github.com/childe/gohangout"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify = "6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
assert_matches = "1.5"

[features]
default = []
test-utils = []